Changes form 23Nov

--- a/Login.html
+++ b/Login.html
@@ -25,14 +25,15 @@
     </header>
 
     <form action="/Login.html" class="form">
-        <h1>Login</h1>
-    
-            <input type="text" name="usuario" placeholder="Usuario">    
-            <input type="password" name="password" placeholder="Pasword">
-      
-        <button type="submit">Entrar</button>
-        <p> <a>¿No tienes una cuenta?</a> <a>Registrame</a> </p>
+        <h1>Login</h1>    
+            <input type="text" name="usuario" placeholder="  Usuario">    
+            <input type="password" name="password" placeholder="  Password">  
+            <button type="submit" class="button">Entrar</button>
+            <p class="register"> <a class="blue">¿No tienes una cuenta?</a> <a>Registrame</a> </p>  
     </form>
+
+
+
     <footer>
         <section class="footer">
             <h3>Todos los derechos reservados a Front End 1 </h3>
