--- a/Login.html
+++ b/Login.html
@@ -17,17 +17,17 @@
     <header>
         <!-- Aqui Top header y bottom header -->
         <div class="submenutop">
-            <h3>Descuentos 20 %</h3>
+            <h3> 20% Descuentos en todos los productos</h3>
         </div>
         <div class="submenumain">
-            <h2>Heroes</h2>
+            <img class="logo" src="./images/logo 1.png" alt="Logo"><h2>Nombre de la tienda</h2>
         </div>
     </header>
 
     <form action="/Login.html" class="form">
         <h1>Login</h1>    
-            <input type="text" name="usuario" placeholder="  Usuario">    
-            <input type="password" name="password" placeholder="  Password">  
+            <input type="text" name="usuario" placeholder="Usuario">    
+            <input type="password" name="password" placeholder="Password">  
             <button type="submit" class="button">Entrar</button>
             <p class="register"> <a class="blue">¿No tienes una cuenta?</a> <a>Registrame</a> </p>  
     </form>
